// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema Should correctly present test results 1`] = `
Object {
  "getErrors": [Function],
  "getWarnings": [Function],
  "hasErrors": [Function],
  "hasWarnings": [Function],
  "tests": Object {
    "friends": Object {
      "errors": Array [
        "id must be a string starting with x0.",
        "middle must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": true,
      "warnings": Array [
        "last name must be a string",
      ],
    },
    "friends[0]": Object {
      "errors": Array [
        "id must be a string starting with x0.",
        "middle must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": true,
      "warnings": Array [
        "last name must be a string",
      ],
    },
    "friends[0].id": Object {
      "errors": Array [
        "id must be a string starting with x0.",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "friends[0].name": Object {
      "errors": Array [
        "middle must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": true,
      "warnings": Array [
        "last name must be a string",
      ],
    },
    "friends[0].name.first": Object {
      "errors": Array [],
      "hasErrors": false,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "friends[0].name.last": Object {
      "errors": Array [],
      "hasErrors": false,
      "hasWarnings": true,
      "warnings": Array [
        "last name must be a string",
      ],
    },
    "friends[0].name.middle": Object {
      "errors": Array [
        "middle must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "id": Object {
      "errors": Array [
        "id must be a string starting with x0.",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user": Object {
      "errors": Array [
        "User name must be a string",
        "First name must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user.name": Object {
      "errors": Array [
        "User name must be a string",
        "First name must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user.name.first": Object {
      "errors": Array [
        "First name must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user.name.last": Object {
      "errors": Array [],
      "hasErrors": false,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user.name.middle": Object {
      "errors": Array [],
      "hasErrors": false,
      "hasWarnings": false,
      "warnings": Array [],
    },
    "user.name.username": Object {
      "errors": Array [
        "User name must be a string",
      ],
      "hasErrors": true,
      "hasWarnings": false,
      "warnings": Array [],
    },
  },
}
`;

exports[`schema function body schema.only Should only validate included fields 1`] = `
Object {
  "a": Object {
    "errors": Array [
      "\\"a\\" must be a number",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
}
`;

exports[`schema function body schema.only Should only validate included fields 2`] = `
Object {
  "a": Array [
    "\\"a\\" must be a number",
  ],
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 1`] = `
Object {
  "b": Object {
    "errors": Array [
      "\\"b\\" must be a numeric string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[0]": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[0].id": Object {
    "errors": Array [],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[1]": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[1].id": Object {
    "errors": Array [],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[2]": Object {
    "errors": Array [],
    "hasErrors": false,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[2].id": Object {
    "errors": Array [],
    "hasErrors": false,
    "hasWarnings": false,
    "warnings": Array [],
  },
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 2`] = `
Object {
  "b": Array [
    "\\"b\\" must be a numeric string",
  ],
  "c": Array [
    "id must be a string",
  ],
  "c[0]": Array [
    "id must be a string",
  ],
  "c[0].id": Array [],
  "c[1]": Array [
    "id must be a string",
  ],
  "c[1].id": Array [],
  "c[2]": Array [],
  "c[2].id": Array [],
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 3`] = `
Object {
  "a": Object {
    "errors": Array [
      "\\"a\\" must be a number",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "b": Object {
    "errors": Array [
      "\\"b\\" must be a numeric string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 4`] = `
Object {
  "a": Array [
    "\\"a\\" must be a number",
  ],
  "b": Array [
    "\\"b\\" must be a numeric string",
  ],
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 5`] = `
Object {
  "c": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[0]": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[0].id": Object {
    "errors": Array [],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[1]": Object {
    "errors": Array [
      "id must be a string",
    ],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[1].id": Object {
    "errors": Array [],
    "hasErrors": true,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[2]": Object {
    "errors": Array [],
    "hasErrors": false,
    "hasWarnings": false,
    "warnings": Array [],
  },
  "c[2].id": Object {
    "errors": Array [],
    "hasErrors": false,
    "hasWarnings": false,
    "warnings": Array [],
  },
}
`;

exports[`schema function body schema.skip Should validate all but skipped fields 6`] = `
Object {
  "c": Array [
    "id must be a string",
  ],
  "c[0]": Array [
    "id must be a string",
  ],
  "c[0].id": Array [],
  "c[1]": Array [
    "id must be a string",
  ],
  "c[1].id": Array [],
  "c[2]": Array [],
  "c[2].id": Array [],
}
`;
